<resources>
    <string name="app_name">Big Foot Tracker</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="register">REGISTER</string>
    <string name="dashboard">Dashboard</string>
    <string name="preferences">Preferences</string>
    <string name="map">Map</string>
    <string name="altitude">Altitude</string>
    <string name="altitude_fragment">Altitude Fragment</string>
    <string name="map_fragment">Map Fragment</string>
    <string name="title_location_permission">Location Permission</string>
    <string name="text_location_permission">App needs location permission</string>
    <string name="ok">OK</string>
    <string name="today_total">Today total</string>
    <string name="total">Total</string>
    <string name="distance">Distance</string>
    <string name="calories">Calories</string>
    <string name="action_share">Share</string>
    <string name="action_settings">Settings</string>
    <string name="db_store">Data persistence</string>
    <string name="db_store_summary">Do you want to keep track of your steps?</string>
    <string name="drawer_close">Close</string>
    <string name="drawer_open">Open</string>
    <string name="action_about">About</string>
    <string name="day_summary">Day Summary</string>
    <string name="summary">Summary</string>
    <string name="zero">0</string>
    <string name="centering">Centering</string>
    <string name="centering_summary">Do you want map to update your position as you go?</string>
    <string-array name="navigation_items">
        <item>Dashboard</item>
        <item>Map</item>
        <item>Altitude</item>
    </string-array>
</resources>
