<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="uk.ac.solent.marcinwisniewski.bigfoottracker.RegisterFragment"
    android:id="@+id/register_view"
    >
    <!-- GRID -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center">
        <!-- 1st row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </LinearLayout> <!-- END 1st row -->

        <!-- 2nd row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

            <!-- 1st column -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="end|bottom"
                android:paddingBottom="12dp"
                android:paddingRight="5dp"
                >

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textAlignment="viewEnd"
                    android:layout_gravity="end|bottom"
                    android:textSize="14sp"
                    />

            </LinearLayout> <!-- END 1st column -->

            <!-- 2nd column-->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:gravity="start|bottom"
                android:paddingLeft="5dp">
                <EditText
                    android:id="@+id/email"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"

                    />
            </LinearLayout> <!-- END 2nd column -->


        </LinearLayout> <!-- END 2nd row -->

        <!-- 3rd row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            >

            <!-- 1st column -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="horizontal"
                android:gravity="top|end"
                android:paddingTop="15dp"
                android:paddingRight="5dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/password"
                    android:textAlignment="viewEnd"
                    android:layout_gravity="end"
                    android:textSize="14sp" /> <!-- END 1st column -->
            </LinearLayout>

            <!-- 2nd column -->
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="2"
                android:orientation="horizontal"
                android:layout_gravity="start|top"
                android:paddingLeft="5dp">
                <EditText
                    android:id="@+id/password"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"
                    />
            </LinearLayout> <!-- END 2nd column -->
        </LinearLayout> <!-- END 3rd row -->

        <!-- 4th row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center"
            >

            <Button
                android:id="@+id/register"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:background="@color/colorPrimary"
                />
        </LinearLayout> <!-- END 4th row -->

        <!-- 5th row -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1">

        </LinearLayout> <!-- END 5th row -->
    </LinearLayout> <!-- END GRID -->
</FrameLayout> <!-- END LAYOUT -->